@startuml

TodoListApplication -- Controller
Controller -- Event

class Event {
    - String description
    - LocalDate dueDate
    - boolean complete
    + getDescription()
    + getDueDate()
    + getComplete()
    + setDescription()
    + setDueDate()
    + setComplete()
    + Event(complete, dueDate, description)
    + toString()
}

class Controller {
    - boolean completionState
    - boolean editGate
    - Button saveListButton
    - Button showButton;
    - Button completion
    - Button addButton
    - Button deleteButton
    - Button editButton
    - Button clearButton
    - ChoiceBox<String> viewDropdown
    - DatePicker dueDate
    - List<String> strings
    - ListView<Event> eventList
    - ObservableList<Event> list
    - TextField description
    - TextField fileName
    - TextField fileLocation
    + initialize(url, resourceBundle)
    + newEvent(actionEvent)
    + deleteEvent(actionEvent)
    + editEvent(actionEvent)
    + changeCompletion(actionEvent)
    + displayChoicePicker(actionEvent)
    + public void saveList(actionEvent)
    + clearList(actionEvent)
    + emptyList()
    + private void refresh()
    + public void writeFile()
}

class TodoListApplication {
    + void start(Stage stage)
    + static void main(String[] args)

}

@enduml